trunk/dev531/src/objects/Review__c.object
<CustomObject>
    <fields>
        <fullName>Alternate_Position__c</fullName>
        <inlineHelpText>Please indicate if there is another position that this candidate may be more suited for.</inlineHelpText>
        <label>Alternate Position</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <formula>Job_Application__r.Candidate__r.First_Name__c &amp; &quot; &quot; &amp; Job_Application__r.Candidate__r.Last_Name__c</formula>
        <label>Candidate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cultural_Comments__c</fullName>
        <label>Cultural Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cultural_Fit__c</fullName>
        <label>Cultural Fit</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experience_Comments__c</fullName>
        <label>Experience Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interviewer_Name__c</fullName>
        <formula>Interviewer__r.Employee__r.FirstName &amp; &quot; &quot; &amp; Interviewer__r.Employee__r.LastName</formula>
        <label>Interviewer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interviewer__c</fullName>
        <label>Interviewer</label>
        <referenceTo>Interviewer__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Leadership_Comments__c</fullName>
        <label>Leadership Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Leadership_Skills__c</fullName>
        <label>Leadership Skills</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Review_Number__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Review Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Score__c</fullName>
        <formula>( Cultural_Fit__c + Experience__c + Leadership_Skills__c + IF( Recommend_for_Hire__c , 5, 1) ) / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position_Name__c</fullName>
        <formula>Job_Application__r.Position__r.Name</formula>
        <label>Position Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Recommended__c</fullName>
        <label>Reason Recommended</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recommend_for_Hire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recommend for Hire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <label>Review</label>
    <nameField>
        <displayFormat>REV-{0000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Low_Cultural_Fit_Score_Reqs_Explanation</fullName>
        <active>true</active>
        <description>If a reviewer gives an applicant a cultural fit score &lt; 2, he must fill out the cultural comments field to explain why</description>
        <errorConditionFormula>AND( Cultural_Fit__c &lt;2, LEN( Cultural_Comments__c ) = 0)</errorConditionFormula>
        <errorDisplayField>Cultural_Comments__c</errorDisplayField>
        <errorMessage>Cultural Fit scores &lt; 2 require explanation. Please fill out the Cultural Comments field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recommended_for_Hire_Reqs_Explanation</fullName>
        <active>true</active>
        <description>Reviewers recommending an applicant for hire must give a reason why if they give a low score (defined as &lt;= 2) in any category.</description>
        <errorConditionFormula>AND( Recommend_for_Hire__c ,  OR( Cultural_Fit__c  &lt;= 2,  Experience__c  &lt;= 2,  Leadership_Skills__c  &lt;= 2),  LEN( Reason_Recommended__c ) =0 )</errorConditionFormula>
        <errorDisplayField>Reason_Recommended__c</errorDisplayField>
        <errorMessage>If you recommend an applicant for hire you must supply a reason why. Please fill out the Reason Recommended text box.</errorMessage>
    </validationRules>
</CustomObject>